fix: correct broken css styles

--- a/src/components/LeftMenu.scss
+++ b/src/components/LeftMenu.scss
@@ -8,7 +8,7 @@
     background: rgba(255, 255, 255, 0.4);
     padding: .1em .4em;
     margin: 0 3px;
-    fontSize: 13;
-    borderRadius: .3em;
+    font-size: 13;
+    border-radius: .3em;
   }
 }
