--- a/src/components/Player.scss
+++ b/src/components/Player.scss
@@ -14,7 +14,7 @@
   &__frameImg {
     width: 100%;
     height: 100%;
-    objectFit: contain;
+    object-fit: contain;
     left: 0;
     right: 0;
     top: 0;
